--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ p {
     margin:0px;
     padding:0x;
     ####background:#ffffff;
-    background:#eee9e9;
+    ##background:#eee9e9;
     #color:#000011;
     font-size : 12px;
     font:normal 100% Sans-Serif;
